--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <a href="./" class="logo">FlexBlog</a>
       <ul>
         <li><a href="#sobre">Sobre</a></li>
-        <li><a href="./">Produtos</a></li>
-        <li><a href="./">Preço</a></li>
-        <li><a href="./">Qualidade</a></li>
+        <li><a href="#produtos">Produtos</a></li>
+        <li><a href="#preco"">Preço</a></li>
+        <li><a href="#vantagens">Qualidade</a></li>
 
       </ul>
     </div>
@@ -72,7 +72,7 @@
 
   <section class="preco-cont">
 
-    <div class="preco">
+    <div class="preco" id="preco">
       <div class="cobre">
         <h3>Cobre</h3>
         <div class="valor">
@@ -123,7 +123,7 @@
 
   </section>
   <section>
-    <div class="vantagens">
+    <div class="vantagens" id="vantagens">
       <div>
         <h1>Inteligente</h1>
         <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão</p>
